@@ -1,5 +1,9 @@
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* OuputFile.cs: 
+
+2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* INamespace.cs:
 	* ICodeClass.cs:
 	* CodeBuilder.cs:
